k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-v2
  template:
    metadata:
      labels:
        app: portfolio-v2
    spec:
      containers:
        - name: portfolio-v2
          image: gscjr/portfolio-v2:20250404014434
          ports:
            - containerPort: 3000
