k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-v2-service
spec:
  selector:
    app: portfolio-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
